--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,24 @@
-# ÏîÄ¿Æô¶¯¶Ë¿Ú
+# ï¿½ï¿½Ä¿ï¿½ï¿½ï¿½ï¿½ï¿½Ë¿ï¿½
 server.port=8888
 
-#mysqlÊı¾İÔ´ÅäÖÃĞÅÏ¢
+#mysqlï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://122.51.168.40:3306/education_text?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT-8
 spring.datasource.username=root
 spring.datasource.password=123456
 mybatis.mapper-locations=classpath:mappers/*.xml
 
-#redisÊı¾İÔ´ÅäÖÃĞÅÏ¢
+#redisï¿½ï¿½ï¿½ï¿½Ô´ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢
 spring.redis.host=122.51.168.40
 spring.redis.database=0
 spring.redis.port=6379
 spring.redis.password=123456
 
-#httpÇëÇóÏà¹ØÅäÖÃ
-    #×î´óÉÏ´²ÎÄ¼ş´óĞ¡   Ê®°ËÎ»Êıµ¥Î»£¨M£©
+#httpï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+    #ï¿½ï¿½ï¿½ï¿½Ï´ï¿½ï¿½Ä¼ï¿½ï¿½ï¿½Ğ¡   Ê®ï¿½ï¿½Î»ï¿½ï¿½ï¿½ï¿½Î»ï¿½ï¿½Mï¿½ï¿½
 spring.servlet.multipart.max-file-size=999999999999999999
 spring.servlet.multipart.max-request-size=999999999999999999
 
-#ÆßÅ£ÔÆÎÄ¼şÉÏ´«×Ô¶¨ÒåĞÅÏ¢
 qiniu.accessKey=jmoE4b3EUTpzGAM455LFA2HKHK3Vhi_FT27NkCu0
 qiniu.secretKey=GujMYZPlnYLmXCnsqeDMSnIR-ilc_wYHyjG3t_RE
 qiniu.bucketName=object--store
