牛力琼 对项目管理模块页面进行调试 开启日志 级别：debug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,8 @@ spring.redis.password=123456
 
 spring.servlet.multipart.max-file-size=999999999999999999
 spring.servlet.multipart.max-request-size=999999999999999999
-
+#日志  级别：debug
+logging.level.com.pengyipeng.education=debug
 
 qiniu.accessKey=jmoE4b3EUTpzGAM455LFA2HKHK3Vhi_FT27NkCu0
 qiniu.secretKey=GujMYZPlnYLmXCnsqeDMSnIR-ilc_wYHyjG3t_RE
